feat(sql-importer) re-view code ES step - MS